Hetzner DNS integration, DNS servers for CoreOS in packer, other fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 *.swp
 env.sh
-install-config.yaml
+install-config*.yaml
 inventory.ini
 config
 ignition
+*tfstate
 terraform/.terraform
 terraform/.terraform*
 terraform/terraform.tfstate
 terraform/terraform.tfstate.*
 openshift-install-linux-*.tar.gz
 openshift-client-linux-*.tar.gz
+*_my
+*_my/
+*.tfvars
