Bunch of changes & AWS integration

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,12 @@ config
 ignition
 *tfstate
 terraform/.terraform
-terraform/.terraform*
-terraform/terraform.tfstate
-terraform/terraform.tfstate.*
+#terraform/.terraform*
+#terraform/terraform.tfstate
+#terraform/terraform.tfstate.*
 openshift-install-linux-*.tar.gz
 openshift-client-linux-*.tar.gz
 *_my
 *_my/
 *.tfvars
+acme
