--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,7 +3,7 @@ nocows = 1
 inventory = ../inventory.ini
 roles_path = roles
 remote_user = root
-private_key_file = /root/.ssh/hz_tf_test
+private_key_file = /root/.ssh/tf_okd4_dev_hetzner
 host_key_checking = False
 gather_facts = False
 hash_behaviour = merge
