--- a/.github/workflows/aws-ecr-crontab.yml
+++ b/.github/workflows/aws-ecr-crontab.yml
@@ -1,8 +1,8 @@
 name: 📅 OKD4 ECR token
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 */10 * * *' # every 10 hours
+  # schedule:
+  #   - cron: '0 */10 * * *' # every 10 hours
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.SA_OKD4_HETZNER_AWS_ACCESS_KEY_ID }}
