--- a/.github/workflows/okd-master.yml
+++ b/.github/workflows/okd-master.yml
@@ -1,22 +1,22 @@
-name: Docker Build
+# name: Docker Build
 
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
 
-jobs:
-  build-okd:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Fetch external dependencies
-      run: make fetch OPENSHIFT_RELEASE=$(make latest_version)
-    - name: Build the Docker image
-      run: make build OPENSHIFT_RELEASE=$(make latest_version)
-    - name: Test Docker image
-      run: make test OPENSHIFT_RELEASE=$(make latest_version)
-    - name: Login to Docker Registry
-      run: docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }} ${{ secrets.REGISTRY_HOST }}
-    - name: Push Docker image
-      run: make push OPENSHIFT_RELEASE=$(make latest_version)
+# jobs:
+#   build-okd:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: Fetch external dependencies
+#       run: make fetch OPENSHIFT_RELEASE=$(make latest_version)
+#     - name: Build the Docker image
+#       run: make build OPENSHIFT_RELEASE=$(make latest_version)
+#     - name: Test Docker image
+#       run: make test OPENSHIFT_RELEASE=$(make latest_version)
+#     - name: Login to Docker Registry
+#       run: docker login -u ${{ secrets.REGISTRY_USERNAME }} -p ${{ secrets.REGISTRY_PASSWORD }} ${{ secrets.REGISTRY_HOST }}
+#     - name: Push Docker image
+#       run: make push OPENSHIFT_RELEASE=$(make latest_version)
